# EDLN-Mem

./: .gitignore  Cargo.toml  README.md  build.rs
c_src/: eidolon.c  eidolon.h
docs/: architecture.md  plan.md  usage.md
docs/benchmarks/: release_128mb.md
src/: ffi.rs  ipc.rs  main.rs  pool.rs  source.rs  telemetry.rs
